--- a/lab3/templates/marketplace/base.html
+++ b/lab3/templates/marketplace/base.html
@@ -25,20 +25,26 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">About</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'my_profile' %}">My profile</a>
                 </li>
-
 
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">My profile</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'sell' %}">Sell</a>
                 </li>
+
 
             </ul>
         </div>
 
-        <div class="form-inline my-2 my-lg-0">
-            <a href="#" class="btn btn-warning">Login</a>
-        </div>
+        {% if request.user.is_authenticated %}
+            <li class="last"> {{ user.username }} | <a href="{% url 'logout' %}">Logout</a></li>
+        {% else %}
+            <div class="form-inline my-2 my-lg-0">
+                <a href="{% url 'register' %}">Register</a> | <a
+                    href="{% url 'login' %}">Login</a>
+            </div>
+        {% endif %}
+
 
     </div>
 </nav>
